fix-gap

--- a/src/css/rent_a_yacht.css
+++ b/src/css/rent_a_yacht.css
@@ -3,11 +3,10 @@
 }
 
 .rent-a-yacht {
-  padding-top: 80px;
-  padding-bottom: 80px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
-.rent-container {
-}
+
 .rent-title {
   margin-bottom: 40px;
   font-weight: 500;
@@ -84,8 +83,8 @@
 }
 @media screen and (min-width: 768px) {
   .rent-a-yacht {
-    padding-top: 150px;
-    padding-bottom: 150px;
+    padding-top: 75px;
+    padding-bottom: 75px;
   }
 
   .rent-container {
